# sfml-bounce-game

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: Background.h  Ball.h  Game.h  GameConfig.h  GameSounds.h  Paddle.h  Random.h  Stats.h
src/: Background.cpp  Ball.cpp  Game.cpp  GameConfig.cpp  GameSounds.cpp  Main.cpp  Paddle.cpp  Random.cpp  Stats.cpp
