cmake_minimum_required(VERSION 3.28)
project(BounceSFML CXX)
include(FetchContent)
FetchContent_Declare(sfml GIT_REPOSITORY https://github.com/SFML/SFML.git GIT_TAG 3.0.2)
FetchContent_MakeAvailable(sfml)
file(GLOB SOURCES CONFIGURE_DEPENDS "src/*.cpp")
add_executable(BounceSFML ${SOURCES})
target_include_directories(BounceSFML PRIVATE Include)
target_compile_features(BounceSFML PRIVATE cxx_std_20)
target_link_libraries(BounceSFML PRIVATE SFML::Graphics SFML::Audio)
